# fmp4-ingest

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Fragmented Media Ingest Specification_usp.docx  Jenkinsfile  README.md  draft-mekuria-mmediaingest-01.txt  draft-mekuria-mmingest-v2.txt  draft-mekuria-mmingest.txt  draft_Specification.docx  get_rewrite.py  ingest_spec.md  kubernetesAgents.yaml  requirements.md
.github/workflows/: cmake.yml  main.yml
MPEG-120-contribution/: Live-Encoder-Ingest - 2017.pptx
archive/MPEG-120-contribution/: draft_requirements.docx
archive/conference-calls/: ingest-call-june-12th-notes.txt  meeting-1-agenda.txt  notes-20th-of-march.txt  notes-media-ingest-call-march-8th.txt
archive/ingest-docs/: note_on_diffs.txt  software-proposal.pptx
archive/ingest-interactions/: Makefile
archive/ingest-interactions/diagrams/: main.puml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml
conference-calls/: draft_agenda_19th.txt  ingest-call-june-12th-notes.txt  ingest-call-june-13th-notes.txt  media-ingest-call-october-3.txt  meeting-1-agenda.txt  meeting-2-agenda  notes-20th-of-march.txt  notes-beginning  notes-call-july-9th.txt  notes-fmp4-ingest-8th-jan.txt  notes-ingest-call-19th-february.txt  notes-ingest-call-may-22.txt  notes-media-ingest-call-march-8th.txt  some-notes-of-the-ingest-call-28th-jun.txt
docker/fmp4-ingest/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
docker/fmp4-ingest/archive/: draft-mekuria-mmingest.txt  requirements.md
docker/fmp4-ingest/archive/conference-calls/: agenda-20-march.txt  media-ingest-call-october-3.txt  notes-call-feb-5th  notes-call-july-9th.txt  notes-fmp4-ingest-8th-jan.txt  notes-ingest-call-19th-february.txt  notes-ingest-call-may-22.txt  some-notes-of-the-ingest-call-28th-jun.txt
docker/fmp4-ingest/archive/ingest-docs/: ISSUES WITH DASH INGEST.docx  fMP4-ingest-goals.txt
docker/fmp4-ingest/ingest-tools/: .gitignore  .gitmodules  CMakeLists.txt  README.md  fmp4ingest.cpp  push_markers.cpp
docker/fmp4-ingest/ingest-tools/event/: CMakeLists.txt  LICENSE  README.md  base64.h  dash_event_fmp4.cpp  event_track.cpp  event_track.h  find_event_samples.hpp  fmp4_dash_event.cpp  fmp4stream.cpp  fmp4stream.h  gen_avails.cpp  generate_example.cpp  id3.mpd  in.mpd  print_event_samples.cpp  unittest.cpp
docker/fmp4-ingest/ingest-tools/event/.github/workflows/: cmake.yml
docker/fmp4-ingest/ingest-tools/test_files/: in.mpd  tos-fr-096s.cmft
ingest-docs/: fMP4-ingest-goals.txt
ingest-interactions/: README.md
ingest-interactions/diagrams/: main.puml
ingest-tools/: CMakeLists.txt  README.md  base64.cpp  base64.h  catch.hpp  dashEventfmp4.cpp  event_track.cpp  event_track.h  fMP4Stream.cpp  fMP4Stream.h  find_event_samples.cpp  fmp4-ingest.cpp  fmp4DashEvent.cpp  fmp4_init.cpp  fmp4dump.cpp  fmp4ingest.cpp  fmp4init.cpp  fmp4sparse.cpp  fmp4stream.cpp  fmp4stream.h  ingest_receiver_node.js  push_markers.cpp  scte35.ismv  tears-of-steel-nl-ttml.cmft  unittest.cpp
ingest-tools/test_files/: example.cmfm  in.mpd  ingest.mpd  scte-35.cmfm  tears-of-steel-nl.cmft  tos-de-096s.cmft  tos-en-096s.cmft  tos-es-096s.cmft  tos-fr-096s.cmft  tos-nl-096s.cmft
